avoid page breaks in tables

--- a/app/assets/stylesheets/print.css.sass
+++ b/app/assets/stylesheets/print.css.sass
@@ -43,3 +43,6 @@ body
   width: 100% !important
   margin: 0px !important
   padding: 0px !important
+
+table, tr, td, th, tbody, thead, tfoot
+  page-break-inside: avoid !important
